Fixing back button text alignment

--- a/playbook/app/pb_kits/playbook/pb_treemap_chart/_treemap_chart.scss
+++ b/playbook/app/pb_kits/playbook/pb_treemap_chart/_treemap_chart.scss
@@ -10,7 +10,7 @@ $back_button_border_radius: 4;
     }
 
     text {
-      transform: translateX(20px);
+      transform: translateX(25px);
       fill: $white;
     }
   }
